test/spec_vectors/block/fail/module_115.wat
(module (func $type-break-nested-empty-vs-f32 (result f32) (block (result f32) (block (br 1)) (br 0 (f32.const 1.0)))))